--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
         "build": "tsc",
         "_prestart": "npm run build",
-        "start": "nodemon --http-parser=legacy",
+        "start": "nodemon",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
