--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "@types/papaparse": "^5.0.3",
         "express": "^4.17.1",
         "node-libcurl": "^2.0.3",
-        "papaparse": "^5.1.1",
+        "papaparse": "^5.1.1"
     },
     "devDependencies": {
         "@types/express": "^4.17.3",
