--- a/package.json
+++ b/package.json
@@ -1,8 +1,29 @@
 {
-    "name": "lan-server-modbus",
-    "version": "1.0.0",
+    "author": "Marco Warm <MarcusCalidus@gmail.com>",
+    "dependencies": {
+        "@types/papaparse": "^5.0.3",
+        "express": "^4.17.1",
+        "node-libcurl": "^2.0.3",
+        "papaparse": "^5.1.1"
+    },
     "description": "",
+    "devDependencies": {
+        "@types/express": "^4.17.3",
+        "@types/node": "^13.9.1",
+        "concurrently": "^5.1.0",
+        "nodemon": "^2.0.2",
+        "tslint": "^6.1.0",
+        "typescript": "^3.8.3",
+        "prompt-input": "^3.0.0"
+    },
+    "keywords": [],
+    "license": "MIT",
     "main": "dist/index.js",
+    "name": "lan-server-modbus",
+    "repository": {
+        "type": "git",
+        "url": "https://jira.birkenstock.com/bitbucket/scm/mon/lan-server-modbus.git",
+    },
     "scripts": {
         "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
         "postinstall": "npm run configure",
@@ -12,26 +33,5 @@
         "start": "nodemon",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
-    "repository": {
-        "type": "git",
-        "url": "https://jira.birkenstock.com/bitbucket/scm/mon/lan-server-modbus.git"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "@types/papaparse": "^5.0.3",
-        "express": "^4.17.1",
-        "node-libcurl": "^2.0.3",
-        "papaparse": "^5.1.1"
-    },
-    "devDependencies": {
-        "@types/express": "^4.17.3",
-        "@types/node": "^13.9.1",
-        "concurrently": "^5.1.0",
-        "nodemon": "^2.0.2",
-        "tslint": "^6.1.0",
-        "typescript": "^3.8.3",
-        "prompt-input": "^3.0.0"
-    }
+    "version": "1.0.0"
 }
